# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  log.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: ConfTest.yml  MakeTest.yml  UnitTest.yml  UnitTestDocker.yml
docker/: compose.yaml
docker/debian/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: conf.g4  conf.md
docs/config/: config.conf
docs/config/valid_case/: defult_test.conf
documents/: conf.g4  conf.md  review.md  review2.md
documents/documents/: conf.g4  conf.md
documents/server_config/: webserv.conf
server_config/: webserv.conf
srcs/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
srcs/cgi/: CgiResponseParser.cpp  CgiResponseParser.hpp  CgiSocket.cpp  CgiSocket.hpp  CreatCgiProcess.cpp
srcs/config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp  config.cpp  config.hpp  config.txt
srcs/http/: Http.cpp  Http.hpp  HttpUtils.cpp  HttpUtils.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
srcs/server/: CMakeLists.txt  CgiSocket.cpp  Epoll.cpp  Epoll.hpp  Server.cpp  Socket.cpp  Socket.hpp  SocketBuff.cpp  SocketBuff.hpp
srcs/session/: Session.cpp  Session.hpp
srcs/tmp_config/: Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp
srcs/tmp_utils/: CMakeLists.txt  define.hpp  utils.cpp  utils.hpp  utils.tpp
srcs/utils/: define.hpp  utils.cpp  utils.hpp  utils.tpp
test/: client.cpp  test_hello.cpp
tests/: Makefile  docker-compose.yml
tests/Server/: server_test.sh
tests/docker/: Dockerfile  docker-entrypoint.sh
tests/echo_server/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  test.sh
tests/echo_server/client/: Dockerfile  client  client.cpp  client1  docker-entrypoint.sh
tests/echo_server/client/request/: 404.txt  len3072.txt  len4096.txt
tests/echo_server/server/: Dockerfile  config.txt  docker-entrypoint.sh
unit-test/: CMakeLists.txt
unit-test/config/: CMakeLists.txt  OneLine.cpp  TestCase1.cpp  TestCase2.cpp  TestComplex.cpp  TestConfig.cpp  TestInvalidConf.cpp  TestMultipleHost.cpp  TestMultiplePort.cpp  TestMultipleRoute.cpp  TestOneLine.cpp  TestSimple.cpp  TestValidConfig.cpp
unit-test/config/test_config_files/invalid/: NoServer.conf
unit-test/config/test_config_files/valid/: Complex.conf  MultipleHost.conf  MultiplePort.conf  MultipleRoute.conf
unit-test/http/: CMakeLists.txt  Test.cpp
unit-test/request/: CMakeLists.txt  TestResolvePath.cpp
unit-test/request/test_config_files/: cgi.conf
unit-test/resolve_path/: CMakeLists.txt  TestResolvePath.cpp
unit-test/resolve_path/test_config_files/: cgi.conf
unit-test/test_config_files/custom/: case1.conf
unit-test/test_config_files/invalid/: NoReadPermission.conf
unit-test/test_config_files/valid/: Complex.conf  MultipleRoute.conf  OneLine.conf  Simple.conf
webserv_dir/documents/: conf.md
www/: not_found_server.html
www/test1.com/cgi_bin/: ClientRedirect.cgi  UploadCgi.cgi  UploadCgi.cpp  hellow_world.c  hellow_world.cgi  testCgi.cgi  testCgi.cpp
www/test1.com/pubic_html/: IO_Multiplexing_Explanation.html  epoll_explanation.html  external_func.html  index.html  socket_cmmunication_explanation.html
www/webserv_com/: default_404.html
www/webserv_com/cgi_bin/: ClientRedirect.cpp  DocumentCgi.cgi  DocumentCgi.cpp  LocalRedirectStatic.cgi  LocalRedirectStatic.cpp  Login.cgi  Login.cpp  SelfLoopCgi.cgi  SelfLoopCgi.cpp  SelfRedirect.cgi  SelfRedirect.cpp  UploadCgi.cgi  UploadCgi.cpp  Userpage.cgi  Userpage.cpp  hello_world.c  hello_world.cgi
www/webserv_com/db/: session.db
www/webserv_com/pubic_html/: CGI_Explanation.html  Docker_Launch.html  HTTP_Protocol_Explanation.html  IO_Multiplexing_Explanation.html  epoll_explanation.html  index.html  socket_cmmunication_explanation.html  upload.html
www/webserv_com/pubilc_html/: external_func.html
www/webserv_com/public_html/: Login.html  home.html  index.html  upload.html
www/webserv_com/upload/: test_20230609063559.txt  test_20230620135141.txt  test_20230620135159.txt
