add_executable(test_resolve_path TestResolvePath.cpp)
target_compile_definitions(test_resolve_path PRIVATE BOOST_TEST_MODULE=TestMultiPort)
target_link_libraries(test_resolve_path PRIVATE MyServerLib MyConfigLib MyUtilsLib MyHttpLib Boost::unit_test_framework)
target_include_directories(test_resolve_path PRIVATE ${PROJECT_SOURCE_DIR}/srcs/config)
target_include_directories(test_resolve_path PRIVATE ${PROJECT_SOURCE_DIR}/srcs/http)
target_include_directories(test_resolve_path PRIVATE ${PROJECT_SOURCE_DIR}/srcs/server)
add_test(NAME test_resolve_path COMMAND test_resolve_path)
enable_testing()
